Support for simulation of process to get contributions from each production rule